--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,13 @@ dependencies:
     sdk: flutter 
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/assets/icon/iconn.png"
+  min_sdk_android: 21
   flutter_test:
     sdk: flutter
 
