--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,7 +56,7 @@ android {
         release  {
             keyAlias "androiddebugkey"
             storePassword "android"
-            storeFile file("mykeystore.jks")
+            storeFile file("mykeys.jks")
             keyPassword "android"
         }
     }
