--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.beezarV2test.android"
+        applicationId "com.beezar.android"
         //com.beezar.android
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
@@ -53,15 +53,15 @@ android {
         multiDexEnabled = true
     }
 
-    signingConfigs {
-        release  {
-            keyAlias "androiddebugkey"
-            storePassword "android"
-            storeFile file("mykeys.jks")
-            keyPassword "android"
+    signingConfigs{
+        debug{
+            keyAlias 'andrioddebugkey'
+            keyPassword 'm5500997m'
+            storeFile file('mykey.jks')
+            storePassword 'm5500997m'
         }
     }
-
+    
     buildTypes {
         release  {
             // TODO: Add your own signing config for the release build.
