--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
-
+  flutter_test:
+    sdk: flutter
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
