--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_login_facebook: ^1.8.0
   path_provider: ^2.1.1
+  rate_my_app: ^2.0.0
+  rating_dialog: ^2.0.4
+  store_redirect: ^2.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
