--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,7 @@ android {
     buildTypes {
         release  {
             // TODO: Add your own signing config for the release build.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
